[package]
name = "testicular_distortion"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Add torsion to dis"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_float = "0.1.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
	"assert_process_allocs",
] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
vizia = { git = "https://github.com/vizia/vizia" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
